    * After creating a batch file, the full path to file is printed and the number of progress items.
        This number can be passed to the next invocation of instl as LAST_PROGRESS variable.
    * curl will print "Progress ... of ...;" at the beginning of each report line, to allow the invoker of
        the batch file to track progress even in the absent of absolute numbers.

    programmer visible changes:
    * new utils function: safe_remove_file, removes a file and does not complain if file does not exist.
    * new utils function: make_one_list, takes a bunch of things and returns them as a long list.
    * new PlatformSpecificHelperBase function progress_staccato, issues a progress message only after a predefined number of requests.
    * new param to PlatformSpecificHelperBase function progress, num_items, can be used to increase the number of total progress items not just by one.
    * new PlatformSpecificHelperBase functions: pushd, popd. They do same as they do on the command line.
    * new PlatformSpecificHelperBase function: touch. Does same as it does on the command line.
    * Mac: exit is done by a function that catches the EXIT trap os that all final instructions are performed even on error.
    * Untaring writes a stamp file when finished corectly. Will prevent redundant re-untar.
    * New BatchAccumulator function __len__, returns the total assignments and instrauction lines.


13/2/2015 0.8.4 Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fixed: on windows files with '&' in name would not pass checksum check.
    * All curl downloads are performed though instl own parallel-run command.

    user visible changes, admin:
    * platfotmSpecificHelper methods svn_add_item, svn_remove_item use $(SVN_CLIENT_PATH) instead of plain svn.
    * overhual to do_up2s3, loop on relavent revisions instead of exiating folders.
    * overhual to do_fix_props, make it less verbose and better messages.